@@ -23,12 +23,12 @@ repositories {
 
 dependencies {
     compile 'org.apache.commons:commons-dbcp2:2.9.0'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.14.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.14.1'
     compile 'org.apache.logging.log4j:log4j-api:2.19.0'
     compile 'org.apache.logging.log4j:log4j-core:2.19.0'
     compile 'com.oracle.database.jdbc:ojdbc8:21.7.0.0'
-    compile 'org.springframework:spring-beans:5.3.16'
-    compile 'org.springframework:spring-jdbc:5.3.16'
+    compile 'org.springframework:spring-beans:5.3.17'
+    compile 'org.springframework:spring-jdbc:5.3.17'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
