@@ -6,6 +6,7 @@ import java.util.*;
 
 public class CurationAllele extends CurationObject {
 
+    public String linkml_version = "1.3.2";
     public List<AlleleModel> allele_ingest_set = new ArrayList<>();
 
     public AlleleModel add(Gene a, Dao dao, String curie) throws Exception {
@@ -28,6 +29,7 @@ public class CurationAllele extends CurationObject {
         m.secondary_identifiers = getSecondaryIdentifiers(curie, a.getRgdId(), dao);
         m.synonyms = getSynonyms(a.getRgdId(), dao);
         m.genomic_locations = getGenomicLocations(a.getRgdId(), SpeciesType.RAT, dao);
+        m.references = getReferences(a.getRgdId(), dao);
 
         allele_ingest_set.add(m);
 
@@ -49,6 +51,26 @@ public class CurationAllele extends CurationObject {
         return results;
     }
 
+    List getReferences(int rgdId, Dao dao) throws Exception {
+        // extract curated ref rgd ids
+        List<Reference> refs = dao.getReferenceAssociations(rgdId);
+        if( refs.isEmpty() ) {
+            return null;
+        }
+        List results = new ArrayList();
+        for( Reference r: refs ) {
+            results.add("RGD:"+r.getRgdId());
+        }
+
+        // and pubmed ids if available
+        List<XdbId> xdbIds = dao.getCuratedPubmedIds(rgdId);
+        for( XdbId xdbId: xdbIds ) {
+            results.add("PMID:"+xdbId.getAccId());
+        }
+
+        return results;
+    }
+
     class AlleleModel {
         public String created_by = "RGD";
         public String curie;
@@ -58,6 +80,7 @@ public class CurationAllele extends CurationObject {
         public boolean internal = false;
         public String name;
         public Boolean obsolete = null;
+        public List<String> references = null;
         public List<String> secondary_identifiers = null;
         public String symbol;
         public List synonyms = null;
