@@ -1,3 +1,6 @@
+Dec 05, 2022
+  CurationAlleleGenerator -- linkml_model 1.3.2: added export of 'references'
+
 Nov 11, 2022
   updated script to submit HTVCF data
 
